=======
CHANGES
=======

3.14 (unreleased)
-----------------

- Nothing changed yet.


3.13.2 (2011-08-04)
-------------------

- Add missing test dependency on zope.testing.

- Remove test dependency on zope.app.exception.


3.13.1 (2011-03-14)
-------------------

- Test fix: HTTP request should not have leading whitespace.


3.13.0 (2011-01-25)
-------------------

- Reenabled a test which makes sure ``405 MethodNotAllowed`` is returned
  when PUT is not supported. This requires at least version 3.10 of
  `zope.app.http`.


3.12.0 (2010-09-14)
-------------------

- Use the standard libraries doctest module.

- Include the ``notfound.txt`` test again but reduce its scope to functionality
  relevant to this distribution.

- Notify with IStartRequestEvent at the start of the request publication
  cycle.

3.11.1 (2010-04-19)
-------------------

- Fix up tests to work with newer zope.app.wsgi release (3.9.0).

3.11.0 (2010-04-13)
-------------------

- Don't depend on zope.app.testing and zope.app.zcmlfiles anymore in
  the tests.

3.10.2 (2010-01-08)
-------------------

- Lift the test dependency on zope.app.zptpage.


3.10.1 (2010-01-08)
-------------------

- make zope.testing an optional (test) dependency

- Fix tests using a newer zope.publisher that requires zope.login.

3.10.0 (2009-12-15)
-------------------

- Moved EndRequestEvent and IEndRequestEvent to zope.publisher.

- Moved BeforeTraverseEvent and IBeforeTraverseEvent to zope.traversing.

- Removed dependency on zope.i18n.

- Import hooks functionality from zope.component after it was moved there from
  zope.site.

- Import ISite from zope.component after it was moved there from
  zope.location.

3.9.0 (2009-09-29)
------------------

- An abort within handleExceptions could have failed without logging what
  caused the error. It now logs the original problem.

- Moved registration of and tests for two publication-specific event handlers